<resources>
    <string name="app_name">NMedia</string>
    <string name="NMedia">NMedia!</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s have posted a new post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="unsaved">This post haven\'t been saved on server yet</string>
    <string name="retry_saving">This post haven\'t been saved on server yet. Retry save on server</string>
    <string name="newer_posts">Newer posts</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter</string>
    <string name="login">Login</string>
    <string name="authentication">Please, sign in to continue</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_shure">Are You shure?</string>
    <string name="name">Name</string>
    <string name="password_confirm">Confirm your password</string>
    <string name="ad_description">ad</string>
    <string name="failed_users_load">Users load failed</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="company_name">Company Name:</string>
    <string name="position_in_company">Position in company:</string>
    <string name="start_date">Start date:</string>
    <string name="finish_date">Finish date</string>
    <string name="job_warning">Please, fill in all  required fields </string>
    <string name="when">When:</string>
    <string name="where">Where:</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="link_https">Link(Https://..)</string>
    <string name="set_time">Set time</string>
    <string name="days">days</string>
    <string name="set">set</string>
    <string name="user_jobs">user jobs</string>
</resources>