<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".activity.AuthFragment"
    >

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical"
    android:background="@color/purple_700">

    <EditText
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@color/divider_color"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:textColor="#000000"
        tools:text="@string/login"
        android:layout_margin="@dimen/offset"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@color/divider_color"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:text="@string/password"
        android:textColor="#000000"
        android:layout_margin="@dimen/offset"/>

    <Button
        android:layout_margin="@dimen/offset"
        android:layout_gravity="center"
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        tools:text="@string/enter_password" />
</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>