<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/offset">

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/company_name"/>

    <TextView
        android:layout_marginTop="@dimen/offset"
        android:layout_marginStart="@dimen/double_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/companyName"
        app:layout_constraintTop_toBottomOf="@id/company"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/company_name"/>

    <TextView
        android:layout_marginTop="@dimen/offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/position"
        app:layout_constraintTop_toBottomOf="@id/companyName"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/position_in_company"
        android:clickable="true"
        android:linksClickable="true"
        />

    <TextView
        android:layout_marginStart="@dimen/double_offset"
        android:layout_marginTop="@dimen/offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userPosition"
        app:layout_constraintTop_toBottomOf="@id/position"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/position_in_company"/>

    <TextView
        android:layout_marginTop="@dimen/offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startDate"
        app:layout_constraintTop_toBottomOf="@id/userPosition"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/start_date"/>



</androidx.constraintlayout.widget.ConstraintLayout>