<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewEventFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        //edit group
        <LinearLayout
            android:id="@+id/edit_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_offset"
                android:background="@android:color/transparent"
                android:foregroundTint="@color/cancel_red"
                app:srcCompat="@drawable/ic_cancel_24"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_marginTop="@dimen/little_offset"
                app:srcCompat="@drawable/ic_edit_icon_24"
                tools:ignore="VectorDrawableCompat" />


            <ImageButton
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_offset"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_ok_24dp"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        //when and where
        <LinearLayout
            android:id="@+id/date_coords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/edit_group"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:padding="@dimen/little_offset">

            <TextView
              android:id="@+id/date"
              android:layout_width="wrap_content"
              android:layout_height="30dp"
              android:text="@string/when"
              android:textColor="#000000"
              android:gravity="center"
              android:background="@color/calendar_tint"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/online"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/little_offset"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/online"
                android:textColor="#000000"
                app:backgroundTint="@color/calendar_tint"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/offline"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/little_offset"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/offline"
                android:textColor="#000000"
                app:backgroundTint="@color/calendar_tint"
                app:iconPadding="0dp" />

            <EditText
                android:id="@+id/link"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/calendar_tint"
                android:hint="@string/link_https"
                android:importantForAutofill="no"
                android:textColor="#000000"
                tools:text="Link"
                android:layout_margin="@dimen/little_offset"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/place"
                style="@style/Widget.App.Button.OutlinedButton.LikeShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                app:icon="@drawable/ic_place_24"
                app:iconTint="@color/like_button_tint"
                app:layout_constraintStart_toStartOf="parent"
                tools:checked="true"
                android:visibility="gone"/>

        </LinearLayout>

        //content and photo container
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/date_coords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/content"
                    android:gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/post_text"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/offset"
                    tools:text="@string/retry_saving"
                    />
                //photoContainer
                <FrameLayout
                    android:id="@+id/photoContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/removePhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/remove" />
                </FrameLayout>
            </LinearLayout>

        </ScrollView>


        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/calendar_tint"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent">

        </CalendarView>

        <TimePicker
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/calendar_tint"
            android:visibility="gone">

            <Button
                android:id="@+id/set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#5BDACE"
                android:textColor="@color/black"
                android:text="@string/set_time"/>
        </TimePicker>

        //divider
        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/offset"
            android:layout_marginEnd="@dimen/offset"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toTopOf="@id/bottomPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        // dialog
        <LinearLayout
            android:id="@+id/sign_out_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:background="@color/purple_200"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxWidth="@dimen/textWidth"
                android:textAlignment="center"
                android:text="@string/are_you_shure"/>
            <Button
                android:id="@+id/sign_out_dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                android:background="@color/transparent"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cancel_red"
                android:background="@color/transparent"
                android:text="@string/sign_out"/>
        </LinearLayout>

        //attachement group
        <LinearLayout
            android:id="@+id/bottomPanel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pickPhoto"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/offset"
                app:icon="@drawable/ic_photo_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/takePhoto"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/offset"
                app:icon="@drawable/ic_camera_24dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>