<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/feedMain"
    tools:context=".FeedFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/card_post"
                android:nestedScrollingEnabled="true"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        //signIn dialog
        <LinearLayout
            android:id="@+id/sign_in_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:background="@color/purple_200"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxWidth="@dimen/textWidth"
                android:textAlignment="center"
                android:text="@string/authentication"/>
            <Button
                android:id="@+id/sign_in_dialog_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                android:background="@color/transparent"
                android:text="@string/sign_in"/>
            <Button
                android:id="@+id/sign_in_dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cancel_red"
                android:background="@color/transparent"
                android:text="@string/cancel"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_24dp"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>



